--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
 
 
     <div class="result">
-        <h2 id="msg">You Won</h1>
+        <h2 class="res" id="msg">You Won</h1>
     </div>
 
     <script src="index.js"></script>
